# Sea-battle

./: CMakeLists.txt  README.md
demo/: main.cpp
include/: AI.h  comp_field.h  menu.h  params.h  placing_ships.h  player_field.h
sources/: AI.cpp  comp_field.cpp  menu.cpp  placing_ships.cpp  player_field.cpp
